# UserStoryPlanner

./: .env  .gitignore  Dockerfile  docker-compose.yml
config/: be_config_default.toml
usp-backend/: Dockerfile  alembic.ini  alembic.sh  init_db.py  main.py  pyproject.toml  utils.py
usp-backend/_Status Docs/: activity.mmd  project.mmd  release.mmd  step.mmd  story.mmd
usp-backend/auth/: authentification.py  dependencies.py  settings.py  token.py
usp-backend/config/: env.py  language.toml
usp-backend/exporter/: _create.json  _update.json  op_status.py  openproject.py  response_export.json
usp-backend/models/: alias_generator.py  mongo.py
usp-backend/models/database/: __init__.py  activity.py  project.py  release.py  status_history.py  step.py  story.py  user.py
usp-backend/models/request/: activity_write.py  ideas.py  position_switch.py  project_write.py  release_write.py  step_write.py  story_write.py
usp-backend/models/response/: activity_read.py  possible_release_version.py  project_read.py  release_read.py  status_history_read.py  step_read.py  story_read.py
usp-backend/routers/: activity_router.py  auth_router.py  export_router.py  maintain_router.py  openproject_router.py  project_router.py  release_router.py  router_utils.py  status_history_router.py  step_router.py  story_router.py
usp-frontend/: Dockerfile  package.json  vhost.conf
usp-frontend/public/: index.html
usp-frontend/src/: App.styles.tsx  App.tsx  GlobalStyle.ts  index.css  index.tsx
usp-frontend/src/app/: store.ts
usp-frontend/src/models/: project.ts  statusColors.ts  (+2 more)
(+39 files in other folders)
